src/objects/sfsp__ListViewColumn__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Column__c</fullName>
        <label>Column</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__ListView__c</fullName>
        <label>List View</label>
        <referenceTo>sfsp__ListView__c</referenceTo>
        <relationshipLabel>List View Columns</relationshipLabel>
        <relationshipName>ListViewColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfsp__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesAssignmentObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Assignment Object</label>
        <referenceTo>sfsp__SalesAssignmentObject__c</referenceTo>
        <relationshipLabel>Sales Assignment Objects</relationshipLabel>
        <relationshipName>SalesAssignmentObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesNodeBoundary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node Boundary Object</label>
        <referenceTo>sfsp__SalesNodeBoundary__c</referenceTo>
        <relationshipLabel>Sales Node Boundary Objects</relationshipLabel>
        <relationshipName>SalesNodeBoundaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SummaryFormat__c</fullName>
        <label>Summary Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                    <default>true</default>
                    <label>Sum</label>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Median</fullName>
                </value>
                <value>
                    <fullName>PercentOfFocus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assignment Object</fullName>
                </value>
                <value>
                    <fullName>Allocation Metric</fullName>
                </value>
                <value>
                    <fullName>Reference Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>List View Column</label>
    <nameField>
        <displayFormat>Column-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>